--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,18 +30,19 @@ jobs:
           . venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
-      # Run tests (if any)
+          
+      - name: Start Flask App
+        run: |
+          . venv/bin/activate
+          flask run --host=127.0.0.1 --port=5000 &
+          echo $! > flask_pid.txt
+          
       - name: Run tests
         run: |
+          curl http://127.0.0.1:5000/  # Test if the app is reachable
           . venv/bin/activate
           pytest tests/
-      # Build the Flask app (optional if just running tests)
-      - name: Build Flask app
-        run: |
-          . venv/bin/activate
-          flask run --host=127.0.0.1 --port=5000
-
-      # prevent infinite runn
+      
       - name: Stop Flask App
         run: |
-          kill $(cat flask_pid.txt)        
+          kill $(cat flask_pid.txt)      
