--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,20 @@
-absl-py==2.1.0
-astunparse==1.6.3
 azure-functions==1.21.3
 blinker==1.9.0
-cachetools==5.3.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
 click==8.1.7
-exceptiongroup==1.2.2
 Flask==3.1.0
 Flask-Cors==5.0.0
-flatbuffers==23.5.26
 gast==0.5.4
 google-auth==2.28.1
 google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
 grpcio==1.62.0
 gunicorn==23.0.0
-h5py==3.10.0
-idna==3.6
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
-keras==2.15.0
-libclang==16.0.6
-Markdown==3.5.2
 MarkupSafe==3.0.2
-ml-dtypes==0.2.0
-numpy==1.26.4
-oauthlib==3.2.2
-opt-einsum==3.3.0
 packaging==24.2
 pluggy==1.5.0
-protobuf==4.25.3
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
 pytest==8.3.4
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-six==1.16.0
-tensorboard==2.15.2
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.36.0
-tensorflow-macos==2.15.0
-termcolor==2.4.0
-tomli==2.2.1
-typing_extensions==4.10.0
-urllib3==2.2.1
 Werkzeug==3.1.3
-wrapt==1.14.1
+Flask-Cors==5.0.0
