--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
-    "typescript": "~5.6.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
   }
